vault/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vault.ostrike.com
    secretName: vault-prod
  rules:
  - host:  vault.ostrike.com
    http:
      paths:
      - backend:
          serviceName: vault-1600158472
          servicePort: 8200
